<?xml version="1.0"?>
<package format="3">
  <name>lab_table_description</name>
  <version>0.0.0</version>

  <description>Aluminum Lab Table Visual Models</description>
  <maintainer email="chenbn@artc.a-star.edu.sg">Chen Bainian</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend condition="$ROS_VERSION == 1">rviz</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>
  
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/../"/>
  </export>
</package>

